<resources>
    <string name="app_name">Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps">NANO-DEGREE APPS</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK_ HAWK</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="toast_display_message">This button will launch my:</string>
</resources>
