<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/backGroundPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nanodegree_apps"
        android:id="@+id/textView"
        android:layout_weight="0.07"
        android:fontFamily="@string/abc_font_family_headline_material"
        android:textSize="30sp"
        android:textColor="@color/titleColor"
        android:textAlignment="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:layout_margin="5dp"
        android:onClick="displayToastPopularMovies"
        android:background="@color/buttonsPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:layout_margin="5dp"
        android:onClick="displayToastStockHawk"
        android:background="@color/buttonsPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:layout_margin="5dp"
        android:onClick="displayToastBuildItBigger"
        android:background="@color/buttonsPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:layout_margin="5dp"
        android:onClick="displayToastMakeUrAppMaterial"
        android:background="@color/buttonsPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:layout_margin="5dp"
        android:onClick="displayToastGoUbiquitous"
        android:background="@color/buttonsPrimary"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/button6"
        android:layout_weight="0.07"
        android:layout_margin="5dp"
        android:onClick="displayToastCapstone"
        android:background="@color/buttonsPrimary"/>
</LinearLayout>